# FastApi-erp

./: .env.example  README.md  pyproject.toml
fastapi_erp/: __init__.py  cbv.py  database.py
fastapi_erp/business/: book_service.py  item_service.py  user_service.py
fastapi_erp/expose/: book_controller.py  item_controller.py
fastapi_erp/model/api/: book.py  item.py
fastapi_erp/model/base/: book.py  item.py  user.py
